// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox renders disabled with defaultChecked 1`] = `
.c2 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
}

.c3 {
  outline: none;
}

.c4 {
  outline: none;
}

.c0 {
  background-color: #007aff;
  color: #fff;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  vertical-align: middle;
  padding: 2px;
  cursor: pointer;
  background-color: inherit;
  color: #c0cad5;
}

.c0 svg {
  border: 1px solid transparent;
  border-radius: 4px;
  padding: 2px;
}

.c0 svg[data-name='checked'] {
  display: none;
}

.c0 > input:hover ~ svg[data-name='empty'] {
  color: #c0cad5;
}

.c0 > input:focus ~ svg {
  border: 1px solid #c0cad5;
  background-color: #f4f6f8;
}

.c0 > input:checked ~ svg[data-name='checked'] {
  display: inline-block;
  color: #c0cad5;
}

.c0 > input:checked ~ svg[data-name='empty'] {
  display: none;
}

.c0 > input:checked:focus ~ svg {
  border: 1px solid #007aff;
  background-color: #e8f2ff;
}

.c0 > input:checked:hover ~ svg[data-name='checked'] {
  color: #c0cad5;
}

.c1 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  opacity: 0;
  position: absolute;
  z-index: 0;
}

<div
  className="c0"
  color="primary"
  disabled={true}
>
  <input
    className="c1"
    color="primary"
    defaultChecked={true}
    disabled={true}
    id="check-box"
    onChange={[MockFunction]}
    role="checkbox"
    size={20}
    type="checkbox"
  />
  <svg
    aria-hidden={true}
    className="c2 c3"
    data-name="checked"
    fill="currentcolor"
    focusable={false}
    height={24}
    role="img"
    tabIndex={-1}
    viewBox="0 0 24 24"
    width={24}
  >
    <path
      d="M6 3h12c1.7 0 3 1.3 3 3v12c0 1.7-1.3 3-3 3H6c-1.7 0-3-1.3-3-3V6c0-1.7 1.3-3 3-3zm4 14l9-8.6L17.6 7 10 14.3l-3.6-3.5L5 12.2l5 4.8z"
    />
  </svg>
  <svg
    aria-hidden={true}
    className="c2 c4"
    data-name="empty"
    fill="currentcolor"
    focusable={false}
    height={24}
    role="img"
    tabIndex={-1}
    viewBox="0 0 24 24"
    width={24}
  >
    <path
      d="M6 5c-.6 0-1 .4-1 1v12c0 .6.4 1 1 1h12c.6 0 1-.4 1-1V6c0-.6-.4-1-1-1H6zm0-2h12c1.7 0 3 1.3 3 3v12c0 1.7-1.3 3-3 3H6c-1.7 0-3-1.3-3-3V6c0-1.7 1.3-3 3-3z"
    />
  </svg>
</div>
`;

exports[`Checkbox renders disabled with disabled prop 1`] = `
<DocumentFragment>
  .c2 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
}

.c3 {
  outline: none;
}

.c4 {
  outline: none;
}

.c0 {
  background-color: #007aff;
  color: #fff;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  vertical-align: middle;
  padding: 2px;
  cursor: pointer;
  background-color: inherit;
  color: #c0cad5;
}

.c0 svg {
  border: 1px solid transparent;
  border-radius: 4px;
  padding: 2px;
}

.c0 svg[data-name='checked'] {
  display: none;
}

.c0 > input:hover ~ svg[data-name='empty'] {
  color: #c0cad5;
}

.c0 > input:focus ~ svg {
  border: 1px solid #c0cad5;
  background-color: #f4f6f8;
}

.c0 > input:checked ~ svg[data-name='checked'] {
  display: inline-block;
  color: #c0cad5;
}

.c0 > input:checked ~ svg[data-name='empty'] {
  display: none;
}

.c0 > input:checked:focus ~ svg {
  border: 1px solid #007aff;
  background-color: #e8f2ff;
}

.c0 > input:checked:hover ~ svg[data-name='checked'] {
  color: #c0cad5;
}

.c1 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  opacity: 0;
  position: absolute;
  z-index: 0;
}

<div
    class="c0"
    color="primary"
    disabled=""
  >
    <input
      class="c1"
      color="primary"
      disabled=""
      id="check-box"
      role="checkbox"
      size="20"
      type="checkbox"
    />
    <svg
      aria-hidden="true"
      class="c2 c3"
      data-name="checked"
      fill="currentcolor"
      focusable="false"
      height="24"
      role="img"
      tabindex="-1"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M6 3h12c1.7 0 3 1.3 3 3v12c0 1.7-1.3 3-3 3H6c-1.7 0-3-1.3-3-3V6c0-1.7 1.3-3 3-3zm4 14l9-8.6L17.6 7 10 14.3l-3.6-3.5L5 12.2l5 4.8z"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="c2 c4"
      data-name="empty"
      fill="currentcolor"
      focusable="false"
      height="24"
      role="img"
      tabindex="-1"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M6 5c-.6 0-1 .4-1 1v12c0 .6.4 1 1 1h12c.6 0 1-.4 1-1V6c0-.6-.4-1-1-1H6zm0-2h12c1.7 0 3 1.3 3 3v12c0 1.7-1.3 3-3 3H6c-1.7 0-3-1.3-3-3V6c0-1.7 1.3-3 3-3z"
      />
    </svg>
  </div>
   
</DocumentFragment>
`;

exports[`Checkbox renders without the theme passed specifically 1`] = `
<DocumentFragment>
  .c2 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
}

.c3 {
  outline: none;
}

.c4 {
  outline: none;
}

.c0 {
  background-color: #007aff;
  color: #fff;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  vertical-align: middle;
  padding: 2px;
  cursor: pointer;
  background-color: inherit;
  color: #4f6f8f;
}

.c0 svg {
  border: 1px solid transparent;
  border-radius: 4px;
  padding: 2px;
}

.c0 svg[data-name='checked'] {
  display: none;
}

.c0 > input:hover ~ svg[data-name='empty'] {
  color: #007aff;
}

.c0 > input:focus ~ svg {
  border: 1px solid #c0cad5;
  background-color: #f4f6f8;
}

.c0 > input:checked ~ svg[data-name='checked'] {
  display: inline-block;
  color: #007aff;
}

.c0 > input:checked ~ svg[data-name='empty'] {
  display: none;
}

.c0 > input:checked:focus ~ svg {
  border: 1px solid #007aff;
  background-color: #e8f2ff;
}

.c0 > input:checked:hover ~ svg[data-name='checked'] {
  color: #049;
}

.c1 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  opacity: 0;
  position: absolute;
  z-index: 0;
}

<div
    class="c0"
    color="primary"
  >
    <input
      class="c1"
      color="primary"
      id="check-box"
      role="checkbox"
      size="20"
      type="checkbox"
    />
    <svg
      aria-hidden="true"
      class="c2 c3"
      data-name="checked"
      fill="currentcolor"
      focusable="false"
      height="24"
      role="img"
      tabindex="-1"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M6 3h12c1.7 0 3 1.3 3 3v12c0 1.7-1.3 3-3 3H6c-1.7 0-3-1.3-3-3V6c0-1.7 1.3-3 3-3zm4 14l9-8.6L17.6 7 10 14.3l-3.6-3.5L5 12.2l5 4.8z"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="c2 c4"
      data-name="empty"
      fill="currentcolor"
      focusable="false"
      height="24"
      role="img"
      tabindex="-1"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M6 5c-.6 0-1 .4-1 1v12c0 .6.4 1 1 1h12c.6 0 1-.4 1-1V6c0-.6-.4-1-1-1H6zm0-2h12c1.7 0 3 1.3 3 3v12c0 1.7-1.3 3-3 3H6c-1.7 0-3-1.3-3-3V6c0-1.7 1.3-3 3-3z"
      />
    </svg>
  </div>
   
</DocumentFragment>
`;
